add jumping sound

--- a/res.qrc
+++ b/res.qrc
@@ -10,6 +10,7 @@
         <file>music/end.wav</file>
         <file>img/err.png</file>
         <file>img/ok.png</file>
+        <file>music/jump.wav</file>
     </qresource>
     <qresource prefix="/music"/>
 </RCC>
