simple sprite animation

--- a/res.qrc
+++ b/res.qrc
@@ -13,6 +13,9 @@
         <file>music/jump.wav</file>
         <file>img/person.png</file>
         <file>img/person_3.png</file>
+        <file>img/person_l.png</file>
+        <file>img/person_l_2.png</file>
+        <file>img/person_l_3.png</file>
     </qresource>
     <qresource prefix="/music"/>
 </RCC>
