--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -83,7 +83,7 @@ image:url(:/img/person_2.png);
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res.qrc">:/img/terrain.jpg</pixmap>
+     <pixmap resource="res.qrc">:/img/terrain.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -99,7 +99,9 @@ image:url(:/img/person_2.png);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background:url(&quot;:/img/background.jpg&quot;);</string>
+     <string notr="true">/*background:url(&quot;:/img/background.jpg&quot;);*/
+background:url(&quot;:/img/background.jpg&quot;);
+</string>
     </property>
     <property name="text">
      <string/>
