--- a/res.qrc
+++ b/res.qrc
@@ -2,10 +2,7 @@
     <qresource prefix="/new/prefix1"/>
     <qresource prefix="/">
         <file>img/background.jpg</file>
-        <file>img/terrain.jpg</file>
         <file>img/person_2.png</file>
-        <file>img/block.png</file>
-        <file>img/convert_2.jpg</file>
         <file>music/main.wav</file>
         <file>music/end.wav</file>
         <file>img/err.png</file>
@@ -16,6 +13,12 @@
         <file>img/person_l.png</file>
         <file>img/person_l_2.png</file>
         <file>img/person_l_3.png</file>
+        <file>img/block_2.png</file>
+        <file>img/block_3.png</file>
+        <file>img/block_4.png</file>
+        <file>img/block_1.png</file>
+        <file>img/terrain.png</file>
+        <file>img/povistka.png</file>
     </qresource>
     <qresource prefix="/music"/>
 </RCC>
