--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -20,7 +20,11 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Тикать от повiстки</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="res.qrc">
+    <normaloff>:/img/povistka.png</normaloff>:/img/povistka.png</iconset>
   </property>
   <property name="autoFillBackground">
    <bool>false</bool>
@@ -110,28 +114,37 @@ background:url(&quot;:/img/background.jpg&quot;);
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="block_old">
+   <widget class="QLabel" name="avoid_count_label">
     <property name="geometry">
      <rect>
       <x>0</x>
       <y>10</y>
-      <width>41</width>
-      <height>31</height>
+      <width>301</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
     </property>
     <property name="font">
      <font>
-      <family>Courier 10 Pitch</family>
-      <pointsize>10</pointsize>
+      <family>Courier New</family>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
+    <property name="styleSheet">
+     <string notr="true">color:white;</string>
+    </property>
     <property name="frameShape">
-     <enum>QFrame::Panel</enum>
+     <enum>QFrame::NoFrame</enum>
     </property>
     <property name="text">
-     <string>21</string>
+     <string>0 повесток прошло мимо</string>
     </property>
     <property name="scaledContents">
      <bool>false</bool>
@@ -143,8 +156,8 @@ background:url(&quot;:/img/background.jpg&quot;);
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>50</y>
+      <x>300</x>
+      <y>130</y>
       <width>80</width>
       <height>31</height>
      </rect>
@@ -156,8 +169,8 @@ background:url(&quot;:/img/background.jpg&quot;);
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>120</x>
-      <y>50</y>
+      <x>300</x>
+      <y>90</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -186,8 +199,8 @@ background:url(&quot;:/img/background.jpg&quot;);
    <widget class="QPushButton" name="pushButton_3">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>10</y>
+      <x>210</x>
+      <y>90</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -199,8 +212,8 @@ background:url(&quot;:/img/background.jpg&quot;);
    <widget class="QPushButton" name="pushButton_4">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>90</y>
+      <x>210</x>
+      <y>120</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -225,7 +238,7 @@ background:url(&quot;:/img/background.jpg&quot;);
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="res.qrc">:/img/convert_2.jpg</pixmap>
+     <pixmap resource="res.qrc">:/img/povistka.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -249,7 +262,7 @@ background:url(&quot;:/img/background.jpg&quot;);
    </widget>
    <zorder>background</zorder>
    <zorder>terrain</zorder>
-   <zorder>block_old</zorder>
+   <zorder>avoid_count_label</zorder>
    <zorder>pushButton</zorder>
    <zorder>pushButton_2</zorder>
    <zorder>pushButton_3</zorder>
